test/org/midica/testfiles/failing/oto-before-function-call-2.midica
INCLUDE inc/instruments.midica

1: c
{
	1: c (q=2)
	CALL f
}

FUNCTION f
	// do nothing
END
